additional fixes for file store: null values, array handling, parsing of temporal data